fix: all page feedback

--- a/contact.html
+++ b/contact.html
@@ -22,25 +22,25 @@
       <h4 class="text-center text-[#B7A690] text-[25px] mb-[10px]">Contact Us</h4>
 
       <div class="bg-[#fdfeb5] border-[2px] border-[#fde45b] rounded-[25px] p-[10px]">
-        <div class="px-[12px]">
+        <div class="px-[24.5px]">
           <input
             type="text"
             placeholder="Your Email Address"
             class="w-full my-[0.5em] border-[2px] border-[#888888] py-[2px] px-3 rounded-[3px] text-[18px]"
           />
         </div>
-        <div class="px-[12px]">
+        <div class="px-[24.5px]">
           <input
             type="text"
             placeholder="Subject"
             class="w-full border-[2px] border-[#888888] py-[2px] px-3 rounded-[3px] text-[18px]"
           />
         </div>
-        <div class="pt-[6px] px-[12px]">
-          <h3 class="text-center">Message</h3>
+        <div class="pt-[6px] px-[24.5px]">
+          <h3 class="text-center text-[#B7A6] font-medium text-[25px]">Message</h3>
           <textarea class="w-full border-[2px] border-[#888888] h-[200px] text-[18px]" name="" id=""></textarea>
         </div>
-        <div class="flex items-center gap-[4px] px-[12px]">
+        <div class="flex items-center gap-[4px] px-[24.5px]">
           <!-- CAPTCHA Image -->
           <div class="max-w-[200px] border-[2px] border-[#808080] p-[2px] rounded-[4px]">
             <img id="captcha-image" src="./image/cp-1.png" alt="" class="rounded-[2px] w-[191px] max-h-[36px]" />
@@ -50,10 +50,10 @@
             <img src="./image/reloadButton.png" alt="reload-button" class="h-10 w-10 text-[14px]" />
           </div>
         </div>
-        <div class="pb-[6px] px-[12px]">
+        <div class="pb-[6px] px-[24.5px]">
           <input
             type="text"
-            placeholder="Your Email Address"
+            placeholder="Enter code from the picture"
             class="w-full my-[0.5em] border-[2px] border-[#888888] py-[2px] px-3 rounded-[3px] text-[18px]"
           />
         </div>
