--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -16,33 +16,133 @@
       <img src="./image/megapersonalsPageHeader 1.png" alt="" />
     </div>
     <div class="pt-[25px]">
-      <h2 class="mt-[20px] mb-[10px] text-[30px] text-[#6a6969] font-bold text-center">Privacy Policy</h2>
-      <h4 class="mb-[10px] text-[#333] text-[14px ] font-bold">Last Updated: Apr 30, 2024</h4>
-      <h4 class="mb-[10px] text-[#333] text-[14px ] font-bold">Introduction</h4>
-      <h4 class="mb-[10px] text-[#333] text-[14px ]">Welcome to Sfanti Grup Solutions SRL privacy policy.</h4>
-      <p class="my-[10px] text-[16px] text-justify text-[#333] leading-[1.42857143]">
-        Sfanti Grup Solutions SRL (“we, us, our, ours, etc.”) is the licensed operator of www.megapersonals.eu and any
-        affiliated websites and related mobile versions and all services provided thereon (“MegaPersonals”). Our goal is
-        to provide a safe, authentic, and law-abiding social introduction platform for our users. To assist in this
-        effort, we require that all users agree to certain terms governing their use of MegaPersonals.
+      <h2 class="mt-[13px] mb-[6px] text-[30px] text-[#6a6969] font-bold text-center">Privacy Policy</h2>
+      <h4 class="mb-[8px] text-[#333] text-[14px] font-bold leading-1.4">Last Updated: Apr 30, 2024</h4>
+      <h4 class="mb-[10px] text-[#333] text-[14px] font-bold leading-1.4">Introduction</h4>
+      <h4 class="mb-[10px] text-[#333] text-[14px] leading-1.4">
+        Welcome to Sfanti Grup Solutions SRL privacy policy.
+      </h4>
+      <p class="my-[10px] text-[14px] text-justify text-[#333] leading-1.4">
+        Sfanti Grup Solutions SRL respects your privacy and is committed to protecting your personal data. This privacy
+        policy will inform you as to how we look after your personal data when you visit our website (regardless of
+        where you visit it from) and tell you about your privacy rights and how the law protects you.
       </p>
-      <p class="my-[10px] text-[16px] text-justify text-[#333] leading-[1.42857143]">
-        These Terms of Use constitute a legal contract that establishes the relationship between you, the user, (“you,
-        your, yours, etc.”) and us as it relates to your access to and use of MegaPersonals, a platform that allows
-        registered users who have passed our strict age verification procedures (“Publishers”) to publish personal
-        classified posts (“Posts”). We are the exclusive licensee of all text, images, graphics, photographs, audio,
-        video, buttons, icons, animations, data, messages, software, content, information, or materials on MegaPersonals
-        (“Materials”), except for the Posts which belong to the Publishers and are licensed to us herein.
+      <p class="my-[10px] text-[14px] text-justify text-[#333] leading-1.4">
+        This privacy policy is provided in a layered format so you can click through to the specific areas set out
+        below. Please also use the Glossary to understand the meaning of some of the terms used in this privacy policy.
       </p>
-      <p class="my-[10px] text-[16px] text-justify text-[#333] leading-[1.42857143]">
-        By accessing or using MegaPersonals, you accept and agree to our website policies, including these Terms of Use,
-        and you certify to us that (a) you are eighteen (18) years of age or older, and are at least the age of majority
-        in your jurisdiction; (b) you have the legal capacity to enter into and agree to these Terms of Use; (c) you are
-        using MegaPersonals freely, voluntarily, willingly, and for your own personal enjoyment; (d) you will only
-        provide accurate and complete information to us and promptly update this information as necessary to maintain
-        its accuracy and completeness; and (e) you are aware of the adult-oriented nature of the content on
-        MegaPersonals, are not offended by adult-oriented content, are familiar and compliant with your jurisdiction’s
-        laws affecting your right to access and publish adult-oriented content.
+      <div class="ml-4">
+        <ol type="1" style="list-style-type: decimal">
+          <li class="text-[#0000EE] italic text-[14px] font-bold mb-[8px] hover:underline leading-1.4">
+            Important Information and Who We Are
+          </li>
+          <li class="text-[#0000EE] italic text-[14px] font-bold mb-[8px] hover:underline leading-1.4">
+            The Data We Collect About You
+          </li>
+          <li class="text-[#0000EE] italic text-[14px] font-bold mb-[8px] hover:underline leading-1.4">
+            How Is Your Personal Data Collected
+          </li>
+          <li class="text-[#0000EE] italic text-[14px] font-bold mb-[8px] hover:underline leading-1.4">
+            How We Use Your Personal Data
+          </li>
+          <li class="text-[#0000EE] italic text-[14px] font-bold mb-[8px] hover:underline leading-1.4">
+            Disclosures of Your Personal Data
+          </li>
+          <li class="text-[#0000EE] italic text-[14px] font-bold mb-[8px] hover:underline leading-1.4">
+            International Transfers
+          </li>
+          <li class="text-[#0000EE] italic text-[14px] font-bold mb-[8px] hover:underline leading-1.4">
+            Data Security
+          </li>
+          <li class="text-[#0000EE] italic text-[14px] font-bold mb-[8px] hover:underline leading-1.4">
+            Data Retention
+          </li>
+          <li class="text-[#0000EE] italic text-[14px] font-bold mb-[8px] hover:underline leading-1.4">
+            Your Legal Rights
+          </li>
+          <li class="text-[#0000EE] italic text-[14px] font-bold mb-[8px] hover:underline leading-1.4">
+            US State Privacy Rights
+          </li>
+          <li class="text-[#0000EE] italic text-[14px] font-bold mb-[8px] hover:underline leading-1.4">Glossary</li>
+        </ol>
+      </div>
+      <p class="my-[10px] text-[14px] text-justify text-[#333] leading-1.4 font-bold">
+        1. Important Information and Who We Are
+      </p>
+      <p class="my-[10px] text-[14px] text-justify text-[#333] leading-1.4 font-bold">Purpose of this Privacy Policy</p>
+      <p class="my-[10px] text-[14px] text-justify text-[#333] leading-1.4">
+        This privacy policy aims to give you information on how Sfanti Grup Solutions SRL collects and processes your
+        personal data through your use of this website, including any data you may provide through this website when you
+        post an advertisement.
+      </p>
+      <p class="my-[10px] text-[14px] text-justify text-[#333] leading-1.4">
+        This website is not intended for use by anyone under 18-years old and we do not knowingly collect data relating
+        to children.
+      </p>
+      <p class="my-[10px] text-[14px] text-justify text-[#333] leading-1.4">
+        It is important that you read this privacy policy together with any other privacy policy or fair processing
+        policy we may provide on specific occasions when we are collecting or processing personal data about you so that
+        you are fully aware of how and why we are using your data. This privacy policy supplements other notices and
+        privacy policies and is not intended to override them.
+      </p>
+      <p class="my-[10px] text-[14px] text-justify text-[#333] leading-1.4 font-bold">Controller</p>
+      <p class="my-[10px] text-[14px] text-justify text-[#333] leading-1.4">
+        Sfanti Grup Solutions SRL is the controller and responsible for your personal data (collectively referred to as
+        “we,” “us,” or “our” in this privacy policy).
+      </p>
+      <p class="my-[10px] text-[14px] text-justify text-[#333] leading-1.4">
+        We have appointed a data protection officer (DPO) who is responsible for overseeing questions regarding this
+        privacy policy. If you have any questions about this privacy policy, including any requests to exercise
+        <span class="text-[#0000EE] hover:underline">Your Legal Rights,</span> please contact the DPO using the details
+        set out below.
+      </p>
+      <p class="my-[10px] text-[14px] text-justify text-[#333] leading-1.4 font-bold">Contact Details</p>
+      <p class="my-[10px] text-[14px] text-justify text-[#333] leading-1.4">
+        If you have any questions about this privacy policy or our privacy practices, please contact our DPO in the
+        following ways:
+      </p>
+      <p class="my-[10px] text-[14px] text-justify text-[#333] leading-1.4">
+        Full name of legal entity: Sfanti Grup Solutions SRL
+      </p>
+      <p class="my-[10px] text-[14px] text-justify text-[#333] leading-1.4">
+        Email address:
+        <span class="text-[#0000EE] hover:underline">support@megapersonals.eu</span>
+      </p>
+      <p class="my-[10px] text-[14px] text-justify text-[#333] leading-1.4">
+        Postal address: 50-52 Strada Buzesti, Etaj 11, Suite 17, Bucuresti 1, 011015, Romania
+      </p>
+      <p class="my-[10px] text-[14px] text-justify text-[#333] leading-1.4">Telephone number: +40.312.296.179</p>
+      <p class="my-[10px] text-[14px] text-justify text-[#333] leading-1.4">
+        You have the right to make a complaint at any time to the National Supervisory Authority for Personal Data
+        Processing, the Romanian supervisory authority for data protection issues
+        <span class="text-[#0000EE] hover:underline">(https://www.dataprotection.ro/)</span> . We would, however,
+        appreciate the chance to deal with your concerns before you approach the National Supervisory Authority for
+        Personal Data Processing so please contact us in the first instance.
+      </p>
+      <p class="my-[10px] text-[14px] text-justify text-[#333] leading-1.4 font-bold">
+        Changes to the Privacy Policy and Your Duty to Inform Us of Changes
+      </p>
+      <p class="my-[10px] text-[14px] text-justify text-[#333] leading-1.4">
+        We keep our privacy policy under regular review. This version was last updated on Apr 30, 2024. Historic
+        versions can be obtained by contacting us.
+      </p>
+      <p class="my-[10px] text-[14px] text-justify text-[#333] leading-1.4">
+        It is important that the personal data we hold about you is accurate and current. Please keep us informed if
+        your personal data changes during your relationship with us.
+      </p>
+      <p class="my-[10px] text-[14px] text-justify text-[#333] leading-1.4 font-bold">Third-Party Links</p>
+      <p class="my-[10px] text-[14px] text-justify text-[#333] leading-1.4">
+        This website might include links to third-party websites, plug-ins, and applications. Clicking on those links or
+        enabling those connections may allow third parties to collect or share data about you. We do not control these
+        third-party websites and are not responsible for their privacy statements. When you leave our website, we
+        encourage you to read the privacy policy of every website you visit.
+      </p>
+      <p class="my-[10px] text-[14px] text-justify text-[#333] leading-1.4 font-bold">
+        2. The Data We Collect About You
+      </p>
+      <p class="my-[10px] text-[14px] text-justify text-[#333] leading-1.4">
+        Personal data, or personal information, means any information about an individual from which that person can be
+        identified. It does not include data where the identity has been removed (anonymous data).
       </p>
     </div>
 
