--- a/register.html
+++ b/register.html
@@ -57,7 +57,7 @@
           <div class="mt-[10px]">
             <label class="flex items-start space-x-2">
               <input type="checkbox" required class="mt-1" />
-              <span class="text-[14px] cursor-pointer">
+              <span class="text-[14px] cursor-pointer text-[#333]">
                 I certify that I am 18 years of age or older, that I am placing ads for myself, under my own phone
                 number, and that I am abiding by all local laws and regulations.
               </span>
@@ -74,13 +74,13 @@
         </div>
       </div>
       <div class="mt-[10px] flex items-center justify-center relative">
-        <img src="./image/bannersContainer.png" class="w-[250px] h-[120px]" alt="" />
+        <img src="./image/bannersContainer.png" class="w-[250px] h-[115px]" alt="" />
         <h1 class="absolute top-5 text-[19px] font-bold uppercase">Don't get scammed!</h1>
         <h5 class="absolute left-[180px] top-12 text-[14px] font-bold">Is the address up top:</h5>
         <h5 class="absolute left-[180px] top-[68px] text-[14px] font-bold">megapersonals.eu</h5>
         <h3 class="absolute right-[190px] top-8 text-[50px] font-bold">?</h3>
       </div>
-      <p class="text-[#b8b8b8] text-[14px] text-center mt-[10px] mb-14 hover:underline font-bold">
+      <p class="text-[#b8b8b8] text-[14px] text-center mt-[10px] mb-14 font-bold">
         <a href="login.html">Already have an account?</a>
       </p>
     </div>
