--- a/send-reset-password.html
+++ b/send-reset-password.html
@@ -15,8 +15,8 @@
     <div class="w-[72%] mx-auto mt-[38px]">
       <img src="./image/megapersonalsPageHeader 1.png" alt="" />
     </div>
-    <div class="mt-[35px]">
-      <p class="mt-[7px] mb-[10px] text-center text-[#B7A690] text-[25px] font-medium">Reset Password</p>
+    <div class="mt-[30px]">
+      <p class="mb-[7px] text-center text-[#B7A690] text-[25px] font-medium">Reset Password</p>
       <p class="text-center text-[12px] text-[#333]">Enter your email and we will send you a password reset link</p>
       <div class="flex mx-auto items-center justify-center w-[243px]">
         <div class="w-[243px]">
@@ -48,7 +48,7 @@
           </div>
           <h6 class="text-center text-[#b8b8b8] font-bold text-[14px] mt-[10px]"><a href="login.html">LOGIN</a></h6>
           <div class="mt-[10px] flex items-center justify-center relative">
-            <img src="./image/bannersContainer.png" class="w-[250px] h-[120px]" alt="" />
+            <img src="./image/bannersContainer.png" class="w-[250px] h-[110px]" alt="" />
             <h1 class="absolute top-5 text-[19px] font-bold uppercase">Don't get scammed!</h1>
             <h5 class="absolute left-[22px] top-12 text-[14px] font-bold">Is the address up top:</h5>
             <h5 class="absolute left-[22px] top-[68px] text-[14px] font-bold">megapersonals.eu</h5>
@@ -58,8 +58,8 @@
       </div>
     </div>
 
-    <footer class="mb-[32px]">
-      <div class="my-[20px] text-center">
+    <footer class="">
+      <div class="my-[16px] text-center">
         <a class="text-[#046aaf] py-[2px] font-[Verdana] text-[12px]" href="">Home</a>
         <span class="text-[#046aaf] text-[12px]">|</span>
         <a class="text-[#046aaf] py-[2px] font-[Verdana] text-[12px]" href="about-us.html">About Us</a>
