--- a/subpoenas.html
+++ b/subpoenas.html
@@ -15,34 +15,152 @@
     <div class="w-[72%] mx-auto mt-3">
       <img src="./image/megapersonalsPageHeader 1.png" alt="" />
     </div>
-    <div class="pt-[25px]">
+    <div class="pt-[30px]">
       <h2 class="underline text-[18px] text-[#333] font-bold text-center">SUBPOENA & LAW ENFORCEMENT REQUEST POLICY</h2>
-      <h2 class="underline text-[18px] text-[#333] font-bold text-center">Last Updated: Apr 30, 2024</h2>
+      <h2 class="underline text-[18px] text-[#333] font-bold text-center leading-1.4 mt-1">
+        Last Updated: Apr 30, 2024
+      </h2>
 
-      <p class="my-[10px] text-[16px] text-justify text-[#333] leading-[1.42857143]">
+      <p class="my-[8px] text-[16px] text-justify text-[#333] leading-[1.42857143]">
         Sfanti Grup Solutions SRL (“we, us, our, ours, etc.”) is the licensed operator of www.megapersonals.eu and any
         affiliated websites and related mobile versions and all services provided thereon (“MegaPersonals”). Our goal is
         to provide a safe, authentic, and law-abiding social introduction platform for our users. To assist in this
         effort, we require that all users agree to certain terms governing their use of MegaPersonals.
       </p>
-      <p class="my-[10px] text-[16px] text-justify text-[#333] leading-[1.42857143]">
-        These Terms of Use constitute a legal contract that establishes the relationship between you, the user, (“you,
-        your, yours, etc.”) and us as it relates to your access to and use of MegaPersonals, a platform that allows
-        registered users who have passed our strict age verification procedures (“Publishers”) to publish personal
-        classified posts (“Posts”). We are the exclusive licensee of all text, images, graphics, photographs, audio,
-        video, buttons, icons, animations, data, messages, software, content, information, or materials on MegaPersonals
-        (“Materials”), except for the Posts which belong to the Publishers and are licensed to us herein.
+      <p class="my-[10px] text-[16px] font-bold text-justify">
+        To request user data, please send an email to
+        <span class="text-[#0000EE] hover:underline">legal@megapersonals.eu</span> that (1) complies with the
+        limitations and requirements herein, and (2) contains, as described in detail below: (a) the requested search
+        identifiers, and (b) the categories of user data requested.
       </p>
       <p class="my-[10px] text-[16px] text-justify text-[#333] leading-[1.42857143]">
-        By accessing or using MegaPersonals, you accept and agree to our website policies, including these Terms of Use,
-        and you certify to us that (a) you are eighteen (18) years of age or older, and are at least the age of majority
-        in your jurisdiction; (b) you have the legal capacity to enter into and agree to these Terms of Use; (c) you are
-        using MegaPersonals freely, voluntarily, willingly, and for your own personal enjoyment; (d) you will only
-        provide accurate and complete information to us and promptly update this information as necessary to maintain
-        its accuracy and completeness; and (e) you are aware of the adult-oriented nature of the content on
-        MegaPersonals, are not offended by adult-oriented content, are familiar and compliant with your jurisdiction’s
-        laws affecting your right to access and publish adult-oriented content.
+        Please do not send user service requests or unrelated documents to our Legal Contact. Nothing contained in this
+        Policy shall constitute a waiver of formal legal process or consent to jurisdiction of the courts and/or the
+        legal system in any particular state, province, or country. Please note that the Company is based in the
+        European Union, and we do not maintain offices in the United States, Canada, or elsewhere.
       </p>
+      <p class="text-[16px] font-bold underline">Law Enforcement Requests</p>
+      <p class="my-[10px] text-[16px] text-justify text-[#333] leading-[1.42857143]">
+        We balance the privacy rights of our users with our respect for law enforcement efforts to combat crime -
+        particularly trafficking and abuse of minors. In an effort to assist law enforcement and other governmental
+        agencies in meeting these goals, we strive to assist in pending criminal investigations by providing available
+        user data within two (2) weeks. In some cases, additional time is required. In limited scenarios involving an
+        imminent threat of death or bodily injury, we may prioritize certain requests to expedite a response, in our
+        discretion.
+      </p>
+      <p class="my-[10px] text-[16px] text-justify text-[#333] leading-[1.42857143]">
+        While we will typically provide available user data in response to requests from all law enforcement officers
+        and government attorneys, we reserve the right to insist on receipt of a court order, search warrant, summons,
+        subpoena, or other valid legal process when necessary or appropriate. Please review applicable law before
+        submitting requests for user data.
+      </p>
+      <p class="text-[16px] font-bold underline">Non-Law Enforcement Inquiries</p>
+      <p class="my-[10px] text-[16px] text-justify text-[#333] leading-[1.42857143]">
+        If you are aware of any user engaging in activities that violate our policies, please
+        <span class="text-[#a20092] hover:underline">contact us</span> and provide as much detail as possible, including
+        a URL or post ID, a description of the offense, the date and time of identification, the reason we should remove
+        the offending materials or investigate the activities, and a statement certifying the accuracy of the
+        information you provided to us.
+      </p>
+      <p class="my-[10px] text-[16px] text-justify text-[#333] leading-[1.42857143]">
+        If you are concerned about illegal activities by any of our users, please contact local law enforcement. As
+        noted above, we voluntarily assist in law enforcement investigations into abuse of our services.
+      </p>
+      <p class="my-[10px] text-[16px] text-justify text-[#333] leading-[1.42857143]">
+        We typically require a subpoena or court order from a court of competent jurisdiction before providing user data
+        to private parties including private investigators and non-governmental attorneys. We further reserve the right
+        to request additional data from the requesting party, including without limitation, authenticated copies of
+        court pleadings, in order to verify that the requested data is relevant to any civil or administrative matter.
+        If you wish to send us a subpoena for user data, please transmit the document to
+        <span class="hover:underline text-[#0000EE]">legal@megapersonals.eu.</span>
+      </p>
+      <p class="text-[16px] font-bold underline">Search Identifiers</p>
+      <p class="my-[10px] text-[16px] text-justify text-[#333] leading-[1.42857143]">
+        We can search for available user data using any of the following search identifiers:
+      </p>
+      <p class="text-[16px] mb-[6px] ml-8">URL</p>
+      <p class="text-[16px] mb-[6px] ml-8">Post ID number (found at the end of the URL)</p>
+      <p class="text-[16px] mb-[6px] ml-8">Email address</p>
+      <p class="text-[16px] mb-[6px] ml-8">Telephone number</p>
+      <p class="my-[10px] text-[16px] font-bold text-justify">
+        If a URL or Post ID is provided, please include the date the URL or post ID number was collected. Failure to
+        provide an accurate date that the URL or post ID number was collected may result in providing inaccurate user
+        data or our inability to process the request.
+      </p>
+      <p class="text-[16px] font-bold underline">Categories of Available User Data</p>
+      <p class="my-[10px] text-[16px] text-justify text-[#333] leading-[1.42857143]">
+        Responsive user data may include registration information and available posts. Please contact us with any
+        questions regarding data that may be available in response to any particular request.
+      </p>
+      <p class="my-[10px] text-[16px] text-justify text-[#333] leading-[1.42857143]">
+        <span class="font-bold">Certifications and Testimony: Where specifically requested,</span> we will also provide
+        a Certificate of Authenticity of Foreign Business Records for records authentication purposes. Please note that
+        the Company is based in the European Union, and our employees are unable to appear for live testimony in the
+        United States, Canada, or other foreign jurisdictions.
+      </p>
+      <p class="my-[10px] text-[16px] text-justify text-[#333] leading-[1.42857143]">
+        <span class="font-bold">User Communications:</span> Please note that we do not offer a direct messaging feature,
+        so there are no records of any communications between users. Any communications between our Publishers and the
+        individuals who view their posts occur on third-party services. We do not have knowledge of or access to any
+        communications between users, and records of such communications can only be requested from the relevant
+        third-party service providers, not us.
+      </p>
+      <p class="text-[16px] font-bold underline">Data Retention</p>
+      <p class="my-[10px] text-[16px] text-justify text-[#333] leading-[1.42857143]">
+        We maintain user data for no more than <span class="font-bold">ninety (90) days</span> from the date the
+        associated account was last active. We do not guarantee the existence, accuracy, or regularity of our storage or
+        backup services. Due to data storage capacity and security concerns, all user data and any archival copies of
+        the same, are subject to deletion and destruction at any point. This material is permanently and irrevocably
+        deleted, and such files can thereafter no longer be recovered under any circumstances. In the event of receipt
+        of a preservation request from law enforcement, we will undertake our best efforts to preserve the data
+        identified in such request, to the extent required by applicable law.
+      </p>
+      <p class="text-[16px] font-bold underline">Notification to Users</p>
+      <p class="my-[10px] text-[16px] text-justify text-[#333] leading-[1.42857143]">
+        We reserve the right, but do not undertake the obligation, to notify the affected user prior to responding to a
+        civil or administrative subpoena and to delay compliance for up to ten (10) calendar days, in order to allow our
+        user to move to quash the subpoena or obtain a protective order from a court of competent jurisdiction,
+        excepting emergency circumstances or where otherwise required by law. Confidentiality is typically maintained
+        when assisting with criminal investigations. Nothing in this Policy is intended as legal advice. Please direct
+        any questions regarding legal procedures to your private attorney.
+      </p>
+      <p class="text-[16px] font-bold underline">Costs of Compliance</p>
+      <p class="my-[10px] text-[16px] text-justify text-[#333] leading-[1.42857143]">
+        We may condition compliance with civil or administrative subpoenas only upon payment of Our expenses, as
+        follows:
+      </p>
+      <p class="text-[16px] mb-[6px] ml-8">Research: €75.00/hour</p>
+      <p class="text-[16px] mb-[6px] ml-8">Copies: €0.25/page.</p>
+      <p class="text-[16px] mb-[6px] ml-8">
+        Media Storage Devices (e.g. – CD, DVD, portable drives, etc.): Actual cost.
+      </p>
+      <p class="text-[16px] mb-[6px] ml-8">Mailing / Document Delivery: Actual cost.</p>
+      <p class="text-[16px] mb-[6px] ml-8">Other Costs: Rate determined as incurred.</p>
+      <p class="my-[10px] text-[16px] text-justify text-[#333] leading-[1.42857143]">
+        We also reserve the right to charge an administration fee to the affected user, the amount of which is within
+        our sole discretion.
+      </p>
+      <p class="text-[16px] font-bold underline">Release of User Data in Other Circumstances</p>
+      <p class="my-[10px] text-[16px] text-justify text-[#333] leading-[1.42857143]">
+        Notwithstanding the foregoing, we reserve the right to disclose user data when, in our sole discretion, we
+        believe that it is reasonable to do so. Such circumstances include, but are not limited to the following:
+      </p>
+      <p class="text-[16px] mb-[6px] ml-8">To satisfy any legal obligation;</p>
+      <p class="text-[16px] mb-[6px] ml-8">
+        To identify, contact, or bring legal action against someone who may be violating any our policies;
+      </p>
+      <p class="text-[16px] mb-[6px] ml-8">To investigate fraud or deceptive activity;</p>
+      <p class="text-[16px] mb-[6px] ml-8">
+        To maintain the security of our system(s), servers, datacenters, or properties;
+      </p>
+      <p class="text-[16px] mb-[6px] ml-8">To operate our services properly; and</p>
+      <p class="my-[10px] text-[16px] text-justify text-[#333] leading-[1.42857143]">
+        To protect ourselves, our users, and the general public. In reflection of our continued support of law
+        enforcement, we specifically reserve the right to disclose any and all necessary data to law enforcement in the
+        event of ongoing criminal activity involving our system, illegal use of our system, and/or active human
+        trafficking investigations.
+      </p>
+      <p class="my-[10px] text-[16px] text-center text-[#333] leading-[1.42857143]">Copyright ©2024 MegaPersonals.eu</p>
     </div>
 
     <footer class="pt-[32px] mb-[32px]">
