--- a/treamsOfUse.html
+++ b/treamsOfUse.html
@@ -15,14 +15,15 @@
     <div class="w-[72%] mx-auto mt-3">
       <img src="./image/megapersonalsPageHeader 1.png" alt="" />
     </div>
-    <div class="pt-[22px]">
+    <div class="pt-[20px]">
       <h2 class="mt-[20px] text-[27px] font-bold text-center">Terms of Use</h2>
       <h3 class="mt-[10px] text-center font-semibold text-[19px] text-[#a9a9a9]">Last Updated: May 8, 2024</h3>
       <p class="my-[10px] text-[16px] text-justify text-[#333] leading-[1.42857143]">
-        Sfanti Grup Solutions SRL (“we, us, our, ours, etc.”) is the licensed operator of www.megapersonals.eu and any
-        affiliated websites and related mobile versions and all services provided thereon (“MegaPersonals”). Our goal is
-        to provide a safe, authentic, and law-abiding social introduction platform for our users. To assist in this
-        effort, we require that all users agree to certain terms governing their use of MegaPersonals.
+        Sfanti Grup Solutions SRL (“we, us, our, ours, etc.”) is the licensed operator of
+        <span class="text-[#0000EE]">www.megapersonals.eu</span> and any affiliated websites and related mobile versions
+        and all services provided thereon (“MegaPersonals”). Our goal is to provide a safe, authentic, and law-abiding
+        social introduction platform for our users. To assist in this effort, we require that all users agree to certain
+        terms governing their use of MegaPersonals.
       </p>
       <p class="my-[10px] text-[16px] text-justify text-[#333] leading-[1.42857143]">
         These Terms of Use constitute a legal contract that establishes the relationship between you, the user, (“you,
@@ -41,6 +42,65 @@
         its accuracy and completeness; and (e) you are aware of the adult-oriented nature of the content on
         MegaPersonals, are not offended by adult-oriented content, are familiar and compliant with your jurisdiction’s
         laws affecting your right to access and publish adult-oriented content.
+      </p>
+      <p class="my-[10px] text-[16px] text-justify text-[#333] leading-[1.42857143]">
+        We reserve the right to revise these Terms of Use at any time. You agree that we have this unilateral right, and
+        that all modifications or changes are in force and enforceable immediately upon posting. The updated version
+        supersedes any prior versions immediately upon posting, and the prior version is of no continuing legal effect
+        unless the revised version specifically refers to the prior version and keeps the prior version or portions
+        thereof in effect. We agree that if we change anything in these Terms of Use, we will change the “Last Updated”
+        date at the top of these Terms of Use. You agree to re-visit this page on a frequent basis, and to use the
+        “Refresh” or “Clear Cache” function on your browser when doing so. You agree to note the date above. If the
+        “Last Updated” date remains unchanged from the last time you reviewed these Terms of Use, then you may presume
+        that nothing in these Terms of Use has changed since the last time you visited. If the “Last Updated” date has
+        changed, then you must review the updated Terms of Use in their entirety. You must agree to any updated Terms of
+        Use or immediately cease use of MegaPersonals. If you fail to review these Terms of Use as required to determine
+        if any changes have been made, you assume all responsibility for such omission, and you agree that such failure
+        amounts to your affirmative waiver of your right to review the updated terms. We are not responsible for your
+        neglect of your legal rights.
+      </p>
+      <p class="my-[10px] text-[16px] text-justify text-[#333] leading-[1.42857143]">
+        <span class="text-[#333] font-bold underline">No Illegal Activities:</span> The solicitation, promotion, and
+        facilitation of illegal activities are strictly prohibited. If you engage in any illegal activity activity or if
+        you solicit or offer to purchase or sell any illegal goods or services, whether on MegaPersonals or through
+        links to external websites, we may terminate your account without refund and take any other appropriate action
+        that we reasonably deem necessary to restrict your access to MegaPersonals.
+      </p>
+      <p class="my-[10px] text-[16px] text-justify text-[#333] leading-[1.42857143]">
+        <span class="text-[#333] font-bold underline">No Minors:</span> We take a strong and definite stand against use
+        of MegaPersonals by minors, and we only permit Posts to be published by consenting adults. We take great
+        measures to ensure that no minors appear in the Posts. Publishers are required to undergo strict age
+        verification procedures before publishing Posts on MegaPersonals. You understand that all depictions on
+        MegaPersonals are of persons over the age of eighteen (18) on the date of production. If you seek any form of
+        child sexual abuse material, whether real or virtual, (“CSAM”) you must exit MegaPersonals immediately. We do
+        not provide or promote CSAM, and we do not tolerate those who seek to access or share CSAM. In order to further
+        our zero-tolerance policy, you agree to report any suspected CSAM as described below. Further, you will not
+        allow any minor to access MegaPersonals using your device or account, and you will not share the Materials or
+        the Posts with any minor.
+      </p>
+      <p class="my-[10px] text-[18px] text-justify text-[#333] leading-[1.42857143] font-bold ml-3">1. Account</p>
+      <p class="my-[10px] text-[18px] text-justify text-[#333] leading-[1.42857143] font-medium underline ml-6">
+        A. Registration
+      </p>
+      <p class="my-[10px] text-[16px] text-justify text-[#333] leading-[1.42857143]">
+        All users may view the Posts without registering for an account. To become a Publisher and publish Posts on
+        MegaPersonals in accordance with these Terms of Use, you must (i) register for no more than one (1) account on
+        MegaPersonals; (ii) pass our age verification procedures; (iii) otherwise meet the requirements set forth in and
+        abide by these Terms of Use; and (iv) if you live or reside in any jurisdiction other than the United States,
+        provide a valid payment method and purchase virtual tokens (“Tokens”).
+      </p>
+      <p class="my-[10px] text-[16px] text-justify text-[#333] leading-[1.42857143]">
+        We may contract with independent, third-party age verification service providers that may require you to pay for
+        the age verification procedures associated with the approval of your account on MegaPersonals. You understand
+        and agree that (i) your use of such third-party age verification services is governed by the website policies of
+        such third-party service, not us; (ii) if you are required to pay for age verification services, you are paying
+        the third-party service provider, not us, for such age verification services; and (iii) your registration and
+        approval of your account as a Publisher on MegaPersonals is conditioned upon your payment for and passage of
+        such third-party age verification services. We disclaim any liability associated with your violation of the
+        policies of any such third-party service. You will not be considered a Publisher for the purposes of these Terms
+        of Use until your account has been approved by us and your age has been verified by our third-party service
+        providers. We reserve the right to require you to reverify your age with our third-party service providers or
+        otherwise reconfirm your age at any time, for any reason.
       </p>
     </div>
 
